# lcd_1602_i2c

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/STM32F10x/: Cargo.toml  memory.x
examples/STM32F10x/.cargo/: config
examples/STM32F10x/src/: main.rs
src/: display_control.rs  lib.rs
tests/: integration.rs
