[package]
name = "lcd_1602_i2c"
version = "0.2.1"
edition = "2018"
license = "MIT"
keywords = ["no-std", "lcd", "embedded-hal-driver", "embedded-hal", "aip31068l"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A crate to use I2C character LCD displays that use the AiP31068L chip with embedded-hal"
authors = ["John Socha-Leialoha"]
repository = "https://github.com/JohnSL/lcd_1602_i2c"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "^0.2.4"  # Access to generic embedded functions (`set_high`)

[dev-dependencies]
embedded-hal-mock = "0.7.2"