[package]
name = "sm32f103rb_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "^0.7.3"      # Access to the generic ARM peripherals
cortex-m-rt = "^0.6.12"  # Startup code for the ARM Core
embedded-hal = "^0.2.4"  # Access to generic embedded functions (`set_high`)
panic-halt = "^0.2.0"    # Panic handler
lcd_1602_i2c = { path = "../.." }

# Access to the stm32f103 HAL.
[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt"]
version = "^0.7.0"
